--- a/index.html
+++ b/index.html
@@ -237,24 +237,24 @@
                 <div class="filter-window">
                     <span onclick="closeFilter()">x</span>
                     <h2>Фильтр</h2>
-                    <label style="color: #FEDD69;" class="ch" for="">
-                        <input type="checkbox" class="filter-ch" data-filter="b21,b22,b10">
+                    <label style="color: #84BA86;" class="ch">
+                        <input type="checkbox" class="filter-ch" data-filter="b1,b19,b33">
                         Первая очередь кап. ремонта
                     </label>
-                    <label style="color: #6DCFF4;" class="ch" for="">
-                        <input type="checkbox" class="filter-ch" data-filter="b19,b20,b6" name="" id="">
+                    <label style="color: #6DCFF4;" class="ch">
+                        <input type="checkbox" class="filter-ch" data-filter="b28,b7,b6,b11,b8" name="" id="">
                         Вторая очередь кап. ремонта
                     </label>
-                    <label style="color: #D55226;" class="ch" for="">
-                    <input type="checkbox" class="filter-ch" data-filter="b16,b29" name="" id="">
+                    <label style="color: #D55226;" class="ch">
+                    <input type="checkbox" class="filter-ch" data-filter="b9,b20,b10,b2" name="" id="">
                         Сейчас в ремонте
                     </label>
-                    <label style="color: #848484;" class="ch" for="">
-                        <input type="checkbox" class="filter-ch" data-filter="b2,b11" name="" id="">
+                    <label style="color: #FEDD69;" class="ch">
+                        <input type="checkbox" class="filter-ch" data-filter="b8" name="" id="">
                         Осталось отремонтировать
                     </label>
-                    <label style="color: #2BB3B1;" class="ch" for="last">
-                        <input type="checkbox" class="filter-ch" data-filter="b33,bssk,b7" name="last" id="">
+                    <label style="color: #2BB3B1;" class="ch">
+                        <input type="checkbox" class="filter-ch" data-filter="bssk" name="last" id="">
                         Новое строительство
                     </label>
                 </div>
